tests/__snapshots__/validation-configFile-single-quoted-list-values.snap.txt
Error: String literal with double quotes expected.

  1 | {
> 2 |   "target": ['4.8']
    |              ^
  3 | }

      at ./tstyche.config.json:2:14

